<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitledbg"
    tools:context=".Categories">

    <Button
        android:onClick="onClick"
        android:id="@+id/btnPaintings"
        android:layout_width="128dp"
        android:layout_height="134dp"
        android:background="#FFFFFF"
        android:backgroundTint="#B3AAB5"
        android:text="@string/btn_paintings_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:onClick="onClick"
        android:id="@+id/btnSketches"
        android:layout_width="125dp"
        android:layout_height="134dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#B3AAB5"
        android:text="@string/btn_sketches_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.654"
        app:layout_constraintStart_toEndOf="@+id/btnPaintings"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <Button
        android:onClick="onClick"
        android:id="@+id/btnDigiArt"
        android:layout_width="122dp"
        android:layout_height="119dp"
        android:layout_marginStart="56dp"
        android:backgroundTint="#B3AAB5"
        android:text="@string/btn_digiart_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPaintings"
        app:layout_constraintVertical_bias="0.267" />

    <Button
        android:onClick="onClick"
        android:id="@+id/btnHomeDecor"
        android:layout_width="119dp"
        android:layout_height="125dp"
        android:background="@android:color/holo_blue_light"
        android:backgroundTint="#B3AAB5"
        android:text="@string/btn_home_decor_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/btnDigiArt"
        app:layout_constraintTop_toBottomOf="@+id/btnSketches"
        app:layout_constraintVertical_bias="0.266" />
</androidx.constraintlayout.widget.ConstraintLayout>